--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,4 @@
 <h1>Welcome to the Grotto...</h1>
+
+<button type="button" name="signup_button"><a href="/signup">Signup</a></button>
+<button type="button" name="login_button"><a href="/login">Login</a></button>
