--- a/app/views/dives/index.erb
+++ b/app/views/dives/index.erb
@@ -2,7 +2,12 @@
 <h1>Welcome, <%=current_user.username %></h1>
 
 <h1>All dives</h1>
-
+<%@dives.each do |dive| %>
+  <pre><strong><a href="/divelogs/<%=dive.user.slug%>"><%=dive.user.username%></a></strong>
+    <a href="/divesites/<%=dive.divesite.slug%>"><%=dive.divesite.name%></a> - <%=dive.date%>
+    <a href="/<%=dive.user.slug%>/<%=dive.divesite.slug%>/<%=dive.slug%>">See dive</a>
+  </pre>
+<%end%>
 
 
 <button type="button" name="logout_button"><a href="/logout">Logout</a></button>
