--- a/app/views/dives/index.erb
+++ b/app/views/dives/index.erb
@@ -1,5 +1,5 @@
 
-<h1>Welcome, <%=current_user.username %></h1>
+<h1>Welcome inside, <%=current_user.username %>!</h1>
 
 <h1>All dives</h1>
 <%@dives.each do |dive| %>
