--- a/app/views/divesites/show.erb
+++ b/app/views/divesites/show.erb
@@ -4,5 +4,5 @@
 
 <h2>Who has dived <%=@divesite.name%>?</h2>
 <%@divesite.users.each do |user|%>
-  <p><a href="/divelogs/user.slug"><%=user.username%></a></p>
+  <p><a href="/divelogs/<%=user.slug%>"><%=user.username.titleize%></a></p>
 <%end%>
