Pass create form tests for dive controller

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -4,8 +4,13 @@
   <p><%=dive.date%> - <%=dive.divesite.name%></p>
   <a href="/<%=@user.slug%>/<%=dive.divesite.slug%>/<%=dive.slug%>">See dive</a>
 <%end%>
+<br></br>
 
 
+<%if @user == current_user%>
+  <button type="button" name="edit_button"><a href="/users/<%=@user.slug%>/edit">Edit your account details</a></button>
+<%end%>
 
-
-<button type="button" name="logout_button"><a href="/users/<%=@user.slug%>/edit">Edit your account details</a></button>
+<button type="button" name="new_dive_button"><a href="/dives/new">Log a new dive</a></button>
+<button type="button" name="dives_button"><a href="/dives">Back to dives newsfeed</a></button>
+<button type="button" name="logout_button"><a href="/logout">Logout</a></button>
