--- a/app/views/divesites/show.erb
+++ b/app/views/divesites/show.erb
@@ -1,8 +1,18 @@
-<h1><%=@divesite.name%></h1>
-<h2><%=@divesite.location%>, <%=@divesite.country%></h2>
+<h1><%=@divesite.name.titleize%></h1>
+<h2><%=@divesite.location.titleize%>, <%=@divesite.country.titleize%></h2>
 
 
-<h2>Who has dived <%=@divesite.name%>?</h2>
-<%@divesite.users.each do |user|%>
-  <p><a href="/divelogs/<%=user.slug%>"><%=user.username.titleize%></a></p>
+<%if @divesite.users.empty?%>
+  <h2>No dives have been logged at <%=@divesite.name.titleize%> yet!</h2>
+<%else%>
+  <h2>Who has dived <%=@divesite.name%>?</h2>
+  <%@divesite.users.each do |user|%>
+    <p><a href="/divelogs/<%=user.slug%>"><%=user.username.titleize%></a></p>
+  <%end%>
 <%end%>
+
+
+<button type="button" name="divesites_button"><a href="/divesites">See all divesites</a></button>
+<button type="button" name="divelog_button"><a href="/divelogs/<%=current_user.slug%>">Go to your divelog</a></button>
+<button type="button" name="dives_button"><a href="/dives">Back to dives newsfeed</a></button>
+<button type="button" name="logout_button"><a href="/logout">Logout</a></button>
