--- a/app/views/dives/new.erb
+++ b/app/views/dives/new.erb
@@ -2,7 +2,7 @@
 
 <form class="new-dive-form" action="/dives" method="post">
   <pre>
-    <input type="text" id="date" name="dive[date]" placeholder="Dive date">
+    <input type="text" id="date" name="dive[date]" placeholder="Dive date DD/MM/YYYY">
     <input type="text" name="dive[time]" placeholder="Start time">
     <input type="integer" name="dive[length]" placeholder="Length(mins)">
     <textarea name="dive[notes]" placeholder="Your dive notes"></textarea>
