--- a/app/views/divesites/new.erb
+++ b/app/views/divesites/new.erb
@@ -3,14 +3,14 @@
 <form class="new-divesite-form" action="/divesites" method="post">
   <pre>
     <input type="text" name="divesite[name]" placeholder="Divesite name">
-    <input type="text" name="divesite[location]" placeholder="Divesite location">
-    <input type="text" name="divesite[country]" placeholder="Divesite country">
+    <input type="text" name="divesite[location]" placeholder="Location">
+    <input type="text" name="divesite[country]" placeholder="Country">
   <pre>
 
   <pre>
     <h2>Are you also logging a new dive at this divesite? If so, here's the place to do it!</h2>
     <pre>
-      <input type="text" id="date" name="dive[date]" placeholder="Dive date">
+      <input type="text" id="date" name="dive[date]" placeholder="Dive date DD/MM/YYYY">
       <input type="text" name="dive[time]" placeholder="Start time">
       <input type="integer" name="dive[length]" placeholder="Length(mins)">
       <textarea name="dive[notes]" placeholder="Your dive notes"></textarea>
