--- a/app/views/dives/index.erb
+++ b/app/views/dives/index.erb
@@ -4,7 +4,7 @@
 <h1>All dives</h1>
 <%@dives.reverse.each do |dive| %>
   <pre><strong><a href="/divelogs/<%=dive.user.slug%>"><%=dive.user.username%></a></strong>
-    <a href="/divesites/<%=dive.divesite.slug%>"><%=dive.divesite.name%></a> - <%=dive.date%>
+    <%=dive.date%> - <a href="/divesites/<%=dive.divesite.slug%>"><%=dive.divesite.name.titleize%></a>, <%=dive.divesite.location.titleize%>, <%=dive.divesite.country.titleize%>
     <a href="/<%=dive.user.slug%>/<%=dive.divesite.slug%>/<%=dive.slug%>">See dive</a>
   </pre>
 <%end%>
