--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,9 +1,11 @@
 <h1><%=@user.username.titleize%>'s Dive Log</h1>
 
 <%@user.dives.each do |dive| %>
-  <p><%=dive.date%> - <%=dive.divesite.name%></p>
-  <a href="/<%=@user.slug%>/<%=dive.divesite.slug%>/<%=dive.slug%>">See dive</a>
-<%end%>
+  <pre>
+  <%=dive.date%> - <a href="/divesites/<%=dive.divesite.slug%>"><%=dive.divesite.name.titleize%></a>, <%=dive.divesite.location.titleize%>, <%=dive.divesite.country.titleize%>
+    <a href="/<%=dive.user.slug%>/<%=dive.divesite.slug%>/<%=dive.slug%>">See dive</a>
+  </pre>
+  <%end%>
 <br></br>
 
 
