Improve validation - backend completed

--- a/app/views/dives/index.erb
+++ b/app/views/dives/index.erb
@@ -9,6 +9,7 @@
   </pre>
 <%end%>
 
+<button type="button" name="divesites_button"><a href="/divesites">See all divesites</a></button>
 <button type="button" name="new_dive_button"><a href="/dives/new">Log a new dive</a></button>
 <button type="button" name="logout_button"><a href="/divelogs/<%=current_user.slug%>">Go to your divelog</a></button>
 <button type="button" name="logout_button"><a href="/logout">Logout</a></button>
