--- a/app/views/divesites/edit.erb
+++ b/app/views/divesites/edit.erb
@@ -24,3 +24,8 @@
 
 
 </form>
+
+<button type="button" name="divesites_button"><a href="/divesites">Back to all divesites</a></button>
+<button type="button" name="divelog_button"><a href="/divelogs/<%=current_user.slug%>">Go to your divelog</a></button>
+<button type="button" name="dives_button"><a href="/dives">Back to dives newsfeed</a></button>
+<button type="button" name="logout_button"><a href="/logout">Logout</a></button>
