--- a/app/views/divesites/show.erb
+++ b/app/views/divesites/show.erb
@@ -1,6 +1,31 @@
 <h1><%=@divesite.name.titleize%></h1>
 <h2><%=@divesite.location.titleize%>, <%=@divesite.country.titleize%></h2>
 
+<%if @divesite.dives.map{|dive| !!dive.notes}.include?(true)%>
+  <p>Comments made about dives at this location:<p>
+    <%@divesite.dives.each do |dive|%>
+      <%if dive.notes%>
+        <pre>
+        <strong><%=dive.user.username.titleize%></strong>
+        <%=dive.notes%>
+        </pre>
+      <%end%>
+    <%end%>
+  <%else%>
+  <p>No notes have been made about this site yet!</p>
+<%end%>
+
+  <div class="iframe-outer">
+    <div class="iframe-inner">
+      <iframe
+        width="600"
+        height="450"
+        frameborder="0" style="border:0"
+        src="<%=@mapsrc%>"
+        allowfullscreen>
+      </iframe>
+    </div>
+  </div>
 
 <%if @divesite.users.empty?%>
   <h2>No dives have been logged at <%=@divesite.name.titleize%> yet!</h2>
@@ -12,11 +37,16 @@
 <%end%>
 
 <button type="button" name="update_divesite_button"><a href="/divesites/<%=@divesite.slug%>/edit">Update this divesite</a></button>
-<p>You can only delete this divesite if no other Diver has logged a dive here. Any of your own dives logged here will be deleted. Only hit delete if you're sure!</p>
-<form class="delete_dive" action="/divesites/<%=@divesite.slug%>" method="post">
-  <input type="hidden" name="_method" value="delete">
-  <button type="submit" name="Delete Divesite">Delete Divesite</button>
-</form>
+<%if @destroyable%>
+  <%if @divesite.users.uniq.count != 0%>
+    <p>Any of your own dives logged here will be deleted. Only hit delete if you're sure!</p>
+  <%end%>
+  <form class="delete_dive" action="/divesites/<%=@divesite.slug%>" method="post">
+    <input type="hidden" name="_method" value="delete">
+    <button type="submit" name="Delete Divesite">Delete Divesite</button>
+  </form>
+<%end%>
+<button type="button" name="new_dive_button"><a href="/dives/new">Log a new dive</a></button>
 <button type="button" name="divesites_button"><a href="/divesites">See all divesites</a></button>
 <button type="button" name="divelog_button"><a href="/divelogs/<%=current_user.slug%>">Go to your divelog</a></button>
 <button type="button" name="dives_button"><a href="/dives">Back to dives newsfeed</a></button>
