--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -6,8 +6,8 @@
     <input type="hidden" name="_method" value="patch">
     <input type="text" name="first_name" value="<%=@user.first_name%>">
     <input type="text" name="last_name" value="<%=@user.last_name%>">
-    <input type="text" name="username" value="<%=@user.username%>">
-    <input type="text" name="email" value="<%=@user.email%>">
+    <input type="text" name="username" value="<%=@user.username%>" pattern="^\S*$" title="No spaces please! how about a hypen or underscore instead?">
+    <input type="text" name="email" value="<%=@user.email%>" pattern="^\S*@\S*\.\S*$" title="Please enter a valid email">
     <br>
     If you would like to change your password please do so here, otherwise leave blank!
     <input type="password" name="new_password" placeholder="Your New Password">
