--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,14 @@
-<h1>Welcome to the Grotto...</h1>
 
-<button type="button" name="signup_button"><a href="/signup">Signup</a></button>
-<button type="button" name="login_button"><a href="/login">Login</a></button>
+
+<div class="centered circle">
+  <div class="center_wrapper">
+    <p class="outside_titles">Welcome to the</p>
+    <h1 class="outside_logo">GROTTO...</h1>
+    <div class="row">
+      <a class="dual_column_links" href="/signup">Register</a>
+      <a class="dual_column_links not_first" href="/login">Login</a>
+    </div>
+
+
+  </div>
+</div>
