--- a/app/views/dives/index.erb
+++ b/app/views/dives/index.erb
@@ -1,15 +1,32 @@
 
-<h1>Welcome inside, <%=current_user.username.titleize %>!</h1>
+<div class="centered_feed round_rec">
 
-<h1>All dives</h1>
-<%@dives.reverse.each do |dive| %>
-  <pre><strong><a href="/divelogs/<%=dive.user.slug%>"><%=dive.user.username%></a></strong>
-    <%=dive.date%> - <a href="/divesites/<%=dive.divesite.slug%>"><%=dive.divesite.name.titleize%></a>, <%=dive.divesite.location.titleize%>, <%=dive.divesite.country.titleize%>
-    <a href="/<%=dive.user.slug%>/<%=dive.divesite.slug%>/<%=dive.slug%>">See dive</a>
-  </pre>
-<%end%>
+  <div class="dives_index_wrapper clear-fix">
+    <p class="header-comments">Welcome inside, <%=current_user.username.titleize%>!</p>
+    <h1 class="inside_titles index_title">Latest Dives</h1>
+    <!-- <h1>Latest Dives</h1> -->
+    <div class="row">
+      <a class="dual_column_links" href="/divesites/new">Add a new divesite</a>
+      <a class="dual_column_links not_first" href="/dives/new">Log a new dive</a>
+    </div>
+    <br></br>
+    <div id="all-dives" class="list">
 
-<button type="button" name="divesites_button"><a href="/divesites">See all divesites</a></button>
-<button type="button" name="new_dive_button"><a href="/dives/new">Log a new dive</a></button>
-<button type="button" name="logout_button"><a href="/divelogs/<%=current_user.slug%>">Go to your divelog</a></button>
-<button type="button" name="logout_button"><a href="/logout">Logout</a></button>
+      </div>
+      <hr>
+      <%@dives.reverse.each do |dive| %>
+        <pre><strong><a href="/divelogs/<%=dive.user.slug%>"><%=dive.user.username%></a></strong>
+          <%=dive.date%> :: <a href="/<%=dive.user.slug%>/<%=dive.divesite.slug%>/<%=dive.slug%>">See dive</a>
+          <a href="/divesites/<%=dive.divesite.slug%>"><%=dive.divesite.name.titleize%></a>, <%=dive.divesite.location.titleize%>, <%=dive.divesite.country.titleize%>
+        </pre>
+        <hr>
+      <%end%>
+        <p class="inside-comments">That's all the logged dives we have!</p>
+
+
+    </div> <!-- list -->
+    <br></br>
+
+
+  </div>
+</div>
