--- a/app/views/dives/new.erb
+++ b/app/views/dives/new.erb
@@ -1,22 +1,65 @@
-<h1>Log a new dive</h1>
 
-<form class="new-dive-form" action="/dives" method="post">
-  <pre>
-    <input type="text" id="date" name="dive[date]" placeholder="Dive date DD/MM/YYYY">
-    <input type="text" name="dive[time]" placeholder="Start time">
-    <input type="integer" name="dive[length]" placeholder="Length(mins)">
-    <textarea name="dive[notes]" placeholder="Your dive notes"></textarea>
-  <pre>
+<div class="centered_feed round_rec">
 
-  <pre>
-    <h2>Choose a dive site or add a new one!</h2>
-    <%@divesites.each do |divesite| %>
-      <input id="<%=divesite.name%>" type="radio" name="dive[divesite_id]" value="<%=divesite.id%>"> <%=divesite.name%>, <%=divesite.location%>, <%=divesite.country%>
-    <%end%>
-      <input type="radio" name="dive[divesite_id]" value=""> New: <input type="text" name="new_site[name]" placeholder="New divesite name"> <input type="text" name="new_site[location]" placeholder="New divesite location"> <input type="text" name="new_site[country]" placeholder="New divesite country">
-  </pre>
+  <div class="dives_index_wrapper clear-fix">
 
-    <button type="submit" name="Log Dive">Log Dive</button>
+    <h1 class="inside_titles divelog_title">Log a Dive!</h1>
+<a name="top">
+    <form action="/dives" method="post">
+      <div class="row">
+        <input class="triple_column_inputs" type="text" id="date" name="dive[date]" placeholder="Dive date DD/MM/YYYY">
+        <input class="triple_column_inputs not_first" type="text" name="dive[time]" placeholder="Start time">
+        <input class="triple_column_inputs not_first" type="integer" name="dive[length]" placeholder="Length(mins)">
+      </div>
+      <div class="row">
+        <textarea rows="5" class="triple_column_inputs" name="dive[notes]" placeholder="Your dive notes"></textarea>
+      </div>
+<!-- <div class="row"> -->
+
+  <!-- play -->
+
+<!-- <pre> -->
+  <h2 class="center-text">Choose a dive site or add a new one!</h2>
+  <br>
+  <div class="row">
+    <input class="single_column_links" type="submit" value="Log Dive">
+  </div>
+  <br>
+  <div id="countries">
+    <%@countries.each do |this_country|%><a id="countries" href="#<%=this_country.split(" ").join("-")%>"><%=this_country.titleize%></a>
+    <%end%> <a id="countries" href="#new">New</a>
+  </div>
+<!-- </pre> -->
+<%@countries.each do |this_country|%>
+<pre>
+<a name="<%=this_country.split(" ").join("-")%>"><strong id="this_country"><%=this_country.titleize%></strong></a>
+  <%@divesites.find_all {|ds| ds.country.downcase == this_country.downcase}.sort_by{|ds| ds.location}.each do |divesite|%>
+    <input id="<%=divesite.name%>" type="radio" name="dive[divesite_id]" value="<%=divesite.id%>"> <%=divesite.name.titleize%>, <%=divesite.location.titleize%>, <%=divesite.country.titleize%>
+  <%end%>
+<%end%>
+<br>
+<a name="new"><input type="radio" name="dive[divesite_id]" value=""><strong> New </strong> <br>
+<div class="row scroll">
+<input class="triple_column_inputs" type="text" name="new_site[name]" placeholder="New divesite name"> <input class="triple_column_inputs" type="text" name="new_site[location]" placeholder="New divesite location"> <input class="triple_column_inputs" type="text" name="new_site[country]" placeholder="New divesite country">
+</div>
+</pre>
+
+<a href="#top"><p class="inside-comments">Back to top</p></a>
+<!-- <pre>
+<h2>Choose a dive site or add a new one!</h2>
+  <%@divesites.each do |divesite| %>
+<input id="<%=divesite.name%>" type="radio" name="dive[divesite_id]" value="<%=divesite.id%>"> <%=divesite.name%>, <%=divesite.location%>, <%=divesite.country%>
+  <%end%>
+<input type="radio" name="dive[divesite_id]" value=""> New:<br>
+<div class="row scroll">
+<input class="triple_column_inputs" type="text" name="new_site[name]" placeholder="New divesite name"> <input class="triple_column_inputs" type="text" name="new_site[location]" placeholder="New divesite location"> <input class="triple_column_inputs" type="text" name="new_site[country]" placeholder="New divesite country">
+</div>
+</pre> -->
+<!-- </div> -->
+
+      <br></br>
+    </form>
 
 
-</form>
+  </div>
+</div>
