--- a/app/views/divesites/show.erb
+++ b/app/views/divesites/show.erb
@@ -1,21 +1,95 @@
-<h1><%=@divesite.name.titleize%></h1>
-<h2><%=@divesite.location.titleize%>, <%=@divesite.country.titleize%></h2>
 
-<%if @divesite.dives.map{|dive| !!dive.notes}.include?(true)%>
-  <p>Comments made about dives at this location:<p>
-    <%@divesite.dives.each do |dive|%>
-      <%if dive.notes%>
-        <pre>
-        <strong><%=dive.user.username.titleize%></strong>
-        <%=dive.notes%>
+<div class="centered_divesite round_rec">
+    <!-- <p class="welcome">Welcome inside, <%=current_user.username.titleize %>!</p> -->
+
+  <div class="divesite_index_wrapper clear-fix">
+
+    <div class="row">
+      <div class="divesite_column left">
+
+
+        <h1 class="divesite_titles"><%=@divesite.name.titleize%></h1>
+        <pre class="divesite_pre_text">
+        <%=@divesite.location.titleize%>,
+        <%=@divesite.country.titleize%>
         </pre>
-      <%end%>
-    <%end%>
-  <%else%>
-  <p>No notes have been made about this site yet!</p>
+          <div class="row">
+            <a class="dual_column_links" href="/divesites/<%=@divesite.slug%>/edit">Update Divesite</a>
+            <a class="dual_column_links not_first" href="/dives/new">Log a new dive</a>
+          </div>
+
+<pre class="divesite_pre_text center-text">
+<%if @divesite.users.empty?%>
+<br></br>
+  <br></br>
+<p>No dives have been logged at
+<%=@divesite.name.titleize%> yet!</p>
+<%else%>
+<br></br>
+<p>Who has dived here</p><%@divesite.users.uniq.each do |user|%><a href="/divelogs/<%=user.slug%>"><%=user.username.titleize%></a><br><%end%>
+<%end%>
+</pre>
+
+          </div>
+
+      <div class="divesite_column not_first">
+        <!-- <p>Hidden column</p> -->
+      </div>
+      <div class="divesite_column not_first">
+        <!-- <p>Hidden column</p> -->
+      </div>
+
+      <div class="divesite_column right not_first">
+        <!-- <div id="divelog" class="list"> -->
+
+
+          <%if @destroyable%>
+            <br></br>
+            <%if @divesite.users.uniq.count != 0%>
+<pre class="divesite_pre_text center-text">
+Any of your own dives
+logged here will be
+deleted. Only hit delete
+if you're sure!</pre>
+<%end%>
+<div class="row">
+<form class="single_column_links" action="/divesites/<%=@divesite.slug%>" method="post">
+<input type="hidden" name="_method" value="delete">
+<input class="triple_column_inputs" type="submit" value="Delete Divesite">
+</form>
+</div>
+<%end%>
+<br></br>
+
+<h1 class="divesite_titles right">Notes</h1>
+<%if @divesite.dives.map{|dive| !!dive.notes}.include?(true)%>
+<pre class="divesite_pre_text center-text">
+<%@divesite.dives.each do |dive|%><%if dive.notes%><strong><%=dive.user.username.titleize%></strong>
+<%=dive.notes%></pre>
+<%end%>
+<%end%>
+<%else%>
+<pre class="divesite_pre_text">
+<p>No notes recorded yet!</p>
+</pre>
 <%end%>
 
-  <div class="iframe-outer">
+
+
+
+        <!--</div> list -->
+      <!-- </div> -->
+        </div>
+        <br></br>
+      </div> <!-- row-->
+
+  </div>
+
+
+<!-- </div> -->
+</div>
+<div class="large_centered circle">
+  <!-- <div class="iframe-outer"> -->
     <div class="iframe-inner">
       <iframe
         width="600"
@@ -25,29 +99,5 @@
         allowfullscreen>
       </iframe>
     </div>
-  </div>
-
-<%if @divesite.users.empty?%>
-  <h2>No dives have been logged at <%=@divesite.name.titleize%> yet!</h2>
-<%else%>
-  <h2>Who has dived <%=@divesite.name%>?</h2>
-  <%@divesite.users.uniq.each do |user|%>
-    <p><a href="/divelogs/<%=user.slug%>"><%=user.username.titleize%></a></p>
-  <%end%>
-<%end%>
-
-<button type="button" name="update_divesite_button"><a href="/divesites/<%=@divesite.slug%>/edit">Update this divesite</a></button>
-<%if @destroyable%>
-  <%if @divesite.users.uniq.count != 0%>
-    <p>Any of your own dives logged here will be deleted. Only hit delete if you're sure!</p>
-  <%end%>
-  <form class="delete_dive" action="/divesites/<%=@divesite.slug%>" method="post">
-    <input type="hidden" name="_method" value="delete">
-    <button type="submit" name="Delete Divesite">Delete Divesite</button>
-  </form>
-<%end%>
-<button type="button" name="new_dive_button"><a href="/dives/new">Log a new dive</a></button>
-<button type="button" name="divesites_button"><a href="/divesites">See all divesites</a></button>
-<button type="button" name="divelog_button"><a href="/divelogs/<%=current_user.slug%>">Go to your divelog</a></button>
-<button type="button" name="dives_button"><a href="/dives">Back to dives newsfeed</a></button>
-<button type="button" name="logout_button"><a href="/logout">Logout</a></button>
+  <!-- </div>  -->
+</div>
