--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,395 @@
+/* Fonts */
+@import url('https://fonts.googleapis.com/css?family=Reenie+Beanie|Rock+Salt');
+@import url('https://fonts.googleapis.com/css?family=Sunflower:300');
+/* font-family: 'Rock Salt', cursive; */
+/* font-family: 'Reenie Beanie', cursive; */
+/* font-family: 'Sunflower', sans-serif; */
+
+/* Page size */
+.page {
+  height:100vh;
+  width: 100%;
+  position: relative;
+  /* background-color: black; */
+}
 /* Background Image */
-.main {
-    background-image: "public/images/nature-2609434_1280.jpg");
+body {
+    background-origin: border-box;
+    background-repeat: no-repeat;
+    background-image: url('../images/sea-1652866_1280.jpg');
+    background-position: center;
+    background-size: 100%;
+    background-blend-mode:
+}
+
+/* Logged out view */
+div .centered {
+        position: absolute;
+        top:0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        width: 500px;
+        height: 500px;
+        background-color: rgb(231,253,253);
+}
+
+div .large_centered {
+        position: absolute;
+        top:0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        width: 40%;
+        height: 60%;
+        background-color: rgb(231,253,253);
+}
+
+
+
+.circle {
+   border-radius: 50%;
+}
+
+.outside_titles {
+  text-align: center;
+  color: rgb(5,64,83);
+  font-size: 40px;
+  font-family: 'Sunflower', sans-serif;
+}
+/*
+.pad {
+  padding-top: 30px;
+} */
+
+.outside_logo {
+  color: rgb(5,64,83);
+  font-size: 70px;
+  font-family: 'Rock Salt', cursive;
+}
+
+.center_wrapper {
+      /* background-color: black; */
+        padding: 1em;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+}
+
+/* Inside */
+.dives_index_wrapper {
+      /* background-color: black; */
+        padding: 1em;
+        position: relative;
+        /* margin-top: 400px; */
+        /* top: 30%; */
+        left: 50%;
+        width: 70%;
+        margin-right: -50%;
+        transform: translate(-50%);
+}
+
+.divesite_index_wrapper {
+      /* background-color: black; */
+        padding: 1em;
+        position: relative;
+        /* margin-top: 400px; */
+        /* top: 30%; */
+        left: 50%;
+        width: 100%;
+        margin-right: -50%;
+        transform: translate(-50%);
+}
+
+/* .divelog_wrapper {
+      /* background-color: black;
+        padding: 1em;
+        position: relative;
+        top: 30%;
+        left: 50%;
+        width: 70%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+} */
+
+
+div .centered_feed {
+        position: absolute;
+        top:0px;
+        padding-top: 30px;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        width: 700px;
+        height: 80%;
+        background-color: rgb(231,253,253);
+        overflow: scroll;
+        white-space: wrap;
+    }
+
+div .centered_divesite {
+        position: absolute;
+        top:0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        width: 80%;
+        height: 500px;
+        background-color: rgb(231,253,253);
+        overflow: scroll;
+}
+
+.round_rec {
+   border-radius: 10%;
+}
+
+.list a:hover a:active a:visited a:link {
+  color: grey;
+}
+
+p .notes {
+  max-width: 45em;
+}
+
+
+
+
+.inside_titles {
+  /* margin-top: 400px; */
+  text-align: center;
+  color: rgb(5,64,83);
+  font-size: 40px;
+  font-family: 'Rock Salt', sans-serif;
+}
+
+.divesite_titles {
+  padding-left: 10px;
+  text-align: left;
+  color: rgb(5,64,83);
+  font-size: 2vmin;
+  font-family: 'Rock Salt', sans-serif;
+}
+
+.divesite_titles a {
+  color: inherit;
+  text-decoration: none;
+}
+
+
+.subtitle {
+  font-size: 20px;
+}
+
+.divesite_subtitle {
+  padding-left: 10px;
+  font-size: 1.75vmin;
+  text-align: left;
+  color: rgb(5,64,83);
+  font-family: 'Rock Salt', sans-serif;
+}
+
+.scroll {
+  overflow: scroll;
+}
+
+
+/* .index_title {
+  margin-top: 250px;
+} */
+
+
+.divelog_title {
+  margin-top: 0px;
+}
+
+.inside-comments {
+  text-align: center;
+  margin-top: 50px;
+  color: rgb(5,64,83);
+  font-size: 1em;
+  font-family: 'Rock Salt', sans-serif;
+}
+
+.header-comments {
+  text-align: center;
+  /* margin-top: 200px; */
+  color: rgb(5,64,83);
+  font-size: 1em;
+  font-family: 'Rock Salt', sans-serif;
+}
+
+.divesite_pre_text {
+  font-size: 1.5vmin;
+  white-space: pre-wrap;
+}
+
+.centered {
+  text-align: center;
+}
+
+#countries {
+  font-family: monospace;
+  text-align: center;
+}
+/*
+.pad {
+  padding-top: 30px;
+} */
+
+.inside_logo {
+  color: rgb(5,64,83);
+  font-size: 70px;
+  font-family: 'Rock Salt', cursive;
+}
+
+.list {
+  position: absolute;
+  top: 50%;
+}
+
+.divelog-img {
+  width: 60%;
+  border-radius: 30%;
+  margin-left: 20%;
+}
+
+/* Placeholder text */
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: rgb(231,253,253);
+    opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: rgb(231,253,253);
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+    color: rgb(231,253,253);
+}
+
+/* Column layout */
+* {
+    box-sizing: border-box;
+}
+
+.row {
+    display: flex;
+    /* background-color: grey; */
+}
+
+.dual_column_links {
+    flex: 25%;
+    background-color: rgb(5,64,83);
+    color: rgb(137,235,237);
+    text-align: center;
+    text-decoration: none;
+    font-family: 'Sunflower', sans-serif;
+    font-size: 1em;
+}
+
+.single_column_links {
+    flex: 50%;
+    background-color: rgb(5,64,83);
+    color: rgb(137,235,237);
+    text-align: center;
+    text-decoration: none;
+    font-family: 'Sunflower', sans-serif;
+    font-size: 1em;
+}
+
+
+.triple_column_inputs {
+    width: 100%;
+    background-color: rgb(5,64,83);
+    color: rgb(137,235,237);
+    text-align: center;
+    text-decoration: none;
+    font-family: 'Sunflower', sans-serif;
+    font-size: 1em;
+}
+
+.divesite_column {
+  flex: 25%;
+  text-decoration: none;
+  font-family: 'Sunflower', sans-serif;
+  overflow: scroll;
+  white-space: nowrap;
+}
+
+.left {
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: left;
+}
+
+.right {
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: center;
+}
+
+.center-text {
+  text-align: center;
+}
+
+
+.not_first {
+    border-left: 1px solid;
+    border-color: rgb(231,253,253);
+}
+
+.delete_divesite {
+  width: 100%;
+}
+
+/* Nav Bar */
+#navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  border-bottom: 1px solid rgb(137,235,237);
+  text-align: center;
+}
+
+#navbar nav a {
+  display: inline-block;
+  width: 16.6666667%;
+  margin: 0;
+  padding: 22px 0;
+  text-transform: uppercase;
+  color: coral;
+  text-align: center;
+  /* border-right: 1px solid #ccc; */
+  text-decoration: none;
+  /* font-family: 'Sunflower', sans-serif; */
+  font-family: 'Reenie Beanie', cursive;
+  font-size: 1.5em;
+  background-color: rgba(1,1,1,0.5)
+}
+
+#navbar nav a:hover {
+  /* color: rgb(137,235,237); */
+  background: url("../images/Särkänniemi_-_fish.png"); /* Old browsers */
+  background-size: contain;
+  background-repeat: no-repeat;
+  /* background: -moz-linear-gradient(top,  rgba(0,0,0,1) 0%, rgba(71,71,71,1) 28%, rgba(81,81,81,1) 35%, rgba(71,71,71,1) 72%, rgba(43,43,43,1) 87%, rgba(28,28,28,1) 91%, rgba(0,0,0,1) 100%); /* FF3.6+ */
+  /* background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,1)), color-stop(28%,rgba(71,71,71,1)), color-stop(35%,rgba(81,81,81,1)), color-stop(72%,rgba(71,71,71,1)), color-stop(87%,rgba(43,43,43,1)), color-stop(91%,rgba(28,28,28,1)), color-stop(100%,rgba(0,0,0,1))); /* Chrome,Safari4+ */ */
+  /* background: -webkit-linear-gradient(top,  rgba(0,0,0,1) 0%,rgba(71,71,71,1) 28%,rgba(81,81,81,1) 35%,rgba(71,71,71,1) 72%,rgba(43,43,43,1) 87%,rgba(28,28,28,1) 91%,rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */ */
+  /* background: -o-linear-gradient(top,  rgba(0,0,0,1) 0%,rgba(71,71,71,1) 28%,rgba(81,81,81,1) 35%,rgba(71,71,71,1) 72%,rgba(43,43,43,1) 87%,rgba(28,28,28,1) 91%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */ */
+  /* background: -ms-linear-gradient(top,  rgba(0,0,0,1) 0%,rgba(71,71,71,1) 28%,rgba(81,81,81,1) 35%,rgba(71,71,71,1) 72%,rgba(43,43,43,1) 87%,rgba(28,28,28,1) 91%,rgba(0,0,0,1) 100%); /* IE10+ */ */
+  /* background: linear-gradient(to bottom,  rgba(0,0,0,1) 0%,rgba(71,71,71,1) 28%,rgba(81,81,81,1) 35%,rgba(71,71,71,1) 72%,rgba(43,43,43,1) 87%,rgba(28,28,28,1) 91%,rgba(0,0,0,1) 100%); /* W3C */ */ */
+}
+
+#navbar nav a.menu-icon {
+  display: none;
 }
 
 
@@ -9,6 +398,7 @@
     display: inline-block;
     position: relative;
     width: 50%;
+    /* margin-top: 50px; */
     margin-left: 25%;
 }
 
@@ -33,3 +423,65 @@
         height: 120%;
         width: 120%;
     }
+
+  /* footer */
+/*
+footer {
+  background-color: white;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%)
+} */
+
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  text-align: center;
+  background-color: rgba(1,1,1,0.25)
+}
+
+#footer-content {
+  font-family: 'Sunflower', sans-serif;
+  color: #CC6600;
+  text-decoration: none;
+  text-align: center;
+  font-size: 0.75em;
+}
+
+p .clean_link {
+  text-decoration: none;
+  color: #CC6600;
+}
+
+i {
+  color: #CC6600;
+}
+
+.flash {
+  position: relative;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  top: 52px;
+  width: 100%;
+  z-index: 2;
+  text-align: center;
+  border-bottom: 1px solid coral;
+  border-radius: 30px;
+  background-color: rgb(231,253,253);
+  padding: 5px;
+  font-weight: bold;
+  background: lighten(coral, 60%);
+  color: coral;
+  border: 1px solid coral;
+}
+
+.close {
+  color: coral;
+}
