--- a/app/views/divesites/show.erb
+++ b/app/views/divesites/show.erb
@@ -1,103 +1,100 @@
 
 <div class="centered_divesite round_rec">
-    <!-- <p class="welcome">Welcome inside, <%=current_user.username.titleize %>!</p> -->
 
   <div class="divesite_index_wrapper clear-fix">
 
     <div class="row">
-      <div class="divesite_column left">
 
+      <div class="divesite_column left">
 
         <h1 class="divesite_titles"><%=@divesite.name.titleize%></h1>
         <pre class="divesite_pre_text">
         <%=@divesite.location.titleize%>,
         <%=@divesite.country.titleize%>
         </pre>
-          <div class="row">
-            <a class="dual_column_links" href="/divesites/<%=@divesite.slug%>/edit">Update Divesite</a>
-            <a class="dual_column_links not_first" href="/dives/new">Log a new dive</a>
-          </div>
 
+        <div class="row">
+          <a class="dual_column_links" href="/divesites/<%=@divesite.slug%>/edit">Update Divesite</a>
+          <a class="dual_column_links not_first" href="/dives/new">Log a new dive</a>
+        </div>
+
+        <%if @divesite.users.empty?%>
+          <br></br>
+          <br></br>
 <pre class="divesite_pre_text center-text">
-<%if @divesite.users.empty?%>
-<br></br>
-  <br></br>
 <p>No dives have been logged at
-<%=@divesite.name.titleize%> yet!</p>
-<%else%>
-<br></br>
-<p>Who has dived here</p><%@divesite.users.uniq.each do |user|%><a href="/divelogs/<%=user.slug%>"><%=user.username.titleize%></a><br><%end%>
-<%end%>
-</pre>
+<%=@divesite.name.titleize%> yet!</p></pre>
+        <%else%>
+          <br></br>
+<pre class="divesite_pre_text center-text">
+<p>Who has dived here?</p><%@divesite.users.uniq.each do |user|%><a href="/divelogs/<%=user.slug%>"><%=user.username.titleize%></a><br><%end%></pre>
+        <%end%>
 
-          </div>
+        </div>
 
-      <div class="divesite_column not_first">
-        <!-- <p>Hidden column</p> -->
-      </div>
-      <div class="divesite_column not_first">
-        <!-- <p>Hidden column</p> -->
-      </div>
+        <div class="divesite_column not_first">
+          <!-- <p>Hidden column</p> -->
+        </div>
+        <div class="divesite_column not_first">
+          <!-- <p>Hidden column</p> -->
+        </div>
 
-      <div class="divesite_column right not_first">
-        <!-- <div id="divelog" class="list"> -->
+        <div class="divesite_column right not_first">
+          <!-- <div id="divelog" class="list"> -->
 
 
-          <%if @destroyable%>
-            <br></br>
+        <%if @destroyable%>
+
+          <br></br>
+
             <%if @divesite.users.uniq.count != 0%>
 <pre class="divesite_pre_text center-text">
 Any of your own dives
 logged here will be
 deleted. Only hit delete
 if you're sure!</pre>
-<%end%>
-<div class="row">
-<form class="single_column_links" action="/divesites/<%=@divesite.slug%>" method="post">
-<input type="hidden" name="_method" value="delete">
-<input class="triple_column_inputs" type="submit" value="Delete Divesite">
-</form>
-</div>
-<%end%>
-<br></br>
+            <%end%>
 
-<h1 class="divesite_titles right">Notes</h1>
-<%if @divesite.dives.map{|dive| !!dive.notes}.include?(true)%>
+            <div class="row">
+              <form class="single_column_links" action="/divesites/<%=@divesite.slug%>" method="post">
+                <input type="hidden" name="_method" value="delete">
+                <input class="triple_column_inputs" type="submit" value="Delete Divesite">
+              </form>
+            </div>
+
+            <%end%>
+
+            <br></br>
+
+            <h1 class="divesite_titles right">Notes</h1>
+            <%if @divesite.dives.map{|dive| !!dive.notes}.include?(true)%>
 <pre class="divesite_pre_text center-text">
 <%@divesite.dives.each do |dive|%><%if dive.notes%><strong><%=dive.user.username.titleize%></strong>
-<%=dive.notes%></pre>
-<%end%>
-<%end%>
-<%else%>
+<%=dive.notes%><%end%></pre>
+            <%end%>
+            <%else%>
 <pre class="divesite_pre_text">
 <p>No notes recorded yet!</p>
 </pre>
-<%end%>
+            <%end%>
 
-
-
-
-        <!--</div> list -->
-      <!-- </div> -->
         </div>
-        <br></br>
+
       </div> <!-- row-->
 
   </div>
 
-
-<!-- </div> -->
 </div>
+
+<!-- map -->
 <div class="large_centered circle">
-  <!-- <div class="iframe-outer"> -->
-    <div class="iframe-inner">
-      <iframe
-        width="600"
-        height="450"
-        frameborder="0" style="border:0"
-        src="<%=@mapsrc%>"
-        allowfullscreen>
-      </iframe>
-    </div>
-  <!-- </div>  -->
+  <div class="iframe-inner">
+    <iframe
+      width="600"
+      height="450"
+      frameborder="0" style="border:0"
+      src="<%=@mapsrc%>"
+      allowfullscreen>
+    </iframe>
+  </div>
 </div>
