--- a/app/views/divesites/show.erb
+++ b/app/views/divesites/show.erb
@@ -67,7 +67,7 @@ if you're sure!</pre>
             <br></br>
 
             <h1 class="divesite_titles right">Notes</h1>
-            <%if @divesite.dives.map{|dive| !!dive.notes}.include?(true)%>
+            <%if @divesite.dives.map{|dive| !dive.notes.empty?}.include?(true)%>
               <%@divesite.dives.each do |dive|%><%if dive.notes%>
 <pre class="divesite_pre_text center-text">
 <strong><%=dive.user.username.titleize%></strong>
