Improve map zoom and notes view in Dive and Divesites show pages

--- a/app/views/divesites/show.erb
+++ b/app/views/divesites/show.erb
@@ -68,9 +68,9 @@ if you're sure!</pre>
 
             <h1 class="divesite_titles right">Notes</h1>
             <%if @divesite.dives.map{|dive| !dive.notes.empty?}.include?(true)%>
-              <%@divesite.dives.each do |dive|%><%if dive.notes%>
+              <%@divesite.dives.reverse.each do |dive|%><%if dive.notes%>
 <pre class="divesite_pre_text center-text">
-<strong><%=dive.user.username.titleize%></strong>
+<strong><%=dive.user.username.titleize%></strong> <%=dive.date%>
 <%=dive.notes%><br><%end%>
             <%end%></pre>
             <%else%>
